--- a/main.yml
+++ b/main.yml
@@ -11,7 +11,7 @@ provider "google" {
 
 terraform {
   backend "remote" {
-    organization = "kkorganization1"
+    organization = "kzbz"
 
     workspaces {
       name = "terraform_for_gcp"
